--- a/modules/ipc/tests/CMakeLists.txt
+++ b/modules/ipc/tests/CMakeLists.txt
@@ -16,12 +16,12 @@ define_module_test(
   PUBLIC_LINK_LIBS ""
 )
 
-define_module_test(
-  NAME action_server_tests
-  SOURCES action_server_tests.cpp
-  PUBLIC_INCLUDE_PATHS $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../include>
-  PUBLIC_LINK_LIBS hephaestus::random hephaestus::types_proto
-)
+# define_module_test(
+#   NAME action_server_tests
+#   SOURCES action_server_tests.cpp
+#   PUBLIC_INCLUDE_PATHS $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../include>
+#   PUBLIC_LINK_LIBS hephaestus::random hephaestus::types_proto
+# )
 
 define_module_test(
   NAME service_tests
