push upstream: rename ws_protocol to be consistent with cmake build

--- a/modules/websocket_bridge/BUILD
+++ b/modules/websocket_bridge/BUILD
@@ -33,9 +33,7 @@ heph_cc_library(
         "@boringssl//:ssl",
         "@fmt",
         "@reflect-cpp",
-        "@ws_protocol",
-        "@zenohc_builder//:zenoh-c",
-        "@zenohc_builder//:zenoh-cpp",
+        "@foxglove_websocket"
     ],
 )
 
