--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -97,4 +97,4 @@ bazel_dep(name = "zstd", version = "1.5.6")
 
 # For details on why we do this: https://bazel.build/external/migration
 external_dependencies = use_extension("@hephaestus//bazel:extensions.bzl", "external_dependencies")
-use_repo(external_dependencies, "cpr", "influxdb", "mcap", "reflect-cpp", "ws_protocol", "zenohc_builder")
+use_repo(external_dependencies, "cpr", "influxdb", "mcap", "reflect-cpp", "foxglove_websocket", "zenohc_builder")
