switch to voliro-specific zenoh builder

--- a/modules/websocket_bridge/BUILD
+++ b/modules/websocket_bridge/BUILD
@@ -32,9 +32,19 @@ heph_cc_library(
         "//modules/utils",
         "@boringssl//:ssl",
         "@fmt",
+        "@foxglove_websocket",
         "@reflect-cpp",
-        "@foxglove_websocket"
-    ],
+    ] + select({
+        "@com_voliro_main//:linux_aarch64": [
+            "@zenohc_builder_arm64//:zenoh-c",
+            "@zenohc_builder_arm64//:zenoh-cpp",
+        ],
+        "@com_voliro_main//:linux_x86_64": [
+            "@zenohc_builder_amd64//:zenoh-c",
+            "@zenohc_builder_amd64//:zenoh-cpp",
+        ],
+        "//conditions:default": [],
+    }),
 )
 
 ############
